--- a/src/css/about.css
+++ b/src/css/about.css
@@ -57,3 +57,12 @@
 		padding: 4px;
 	}
 }
+
+@media only screen and (max-width: 600px) {
+	.cards-container {
+		display: grid;
+		grid-template-columns: auto;
+		width: 96%;
+		padding: 4px;
+	}
+}
